
v1.30.0
-------

Finally ScreenBuffer* support fullwidth char
WARNING: ScreenBufferHD breaking changes (beta API - not under SemVer) support for *defaultColor is dropped because it is not compatible with alpha channel and blending, attributes changed: now colors channel are inside color, and bgColor is consistent, allowing to pass similar (standard) color object to both the foreground and background


v1.29.3
-------

Emergency bugfix (#95)


v1.29.2
-------

Fix a TextBuffer bug in .setText() when markup is on


v1.29.1
-------

Palette now has a 256-colors fallback
ANSI colors are available in complex markup


v1.29.0
-------

New: 24 bits Palette for the ScreenBuffer, complex markup for using new colorscheme/color name of the Palette
Lot of bug related to markup fixed (width, wordwrap, ...)


v1.28.42
--------

Fixed markup's parameters pollution (markup + TextBuffer)


v1.28.41
--------

Add some 256-color names (grayscale)


v1.28.40
--------

Document model -- New ColumnMenu* attr option: 'buttonEvenBlurAttr', that match only even entries


v1.28.39
--------

Fixed ScreenBuffer#put() regression ('reset' markup should reset to the provided 'attr' option, if any)


v1.28.38
--------

Document model -- fixed Document#focusNext() regression, refacto of ScreenBuffer#put() to work with the new factorized markup parser


v1.28.37
--------

Fix ScreenBufferHD#put() regression: 'markup' option is working again
update the doc to add a list of supported markup


v1.28.36
--------

Document model -- New: BaseMenu now has a .focusValue() method that give focus to the element having that value


v1.28.35
--------

Document model -- New: Buttons now have a special action key bindings


v1.28.34
--------

Document model -- better default colors for SelectList* and better default handling


v1.28.33
--------

TextBuffer#setContent() now support markup


v1.28.32
--------

Fix markup width bug


v1.28.31
--------

Fix empty SelectList* bug


v1.28.30
--------
