@@ -46,6 +46,7 @@ const NextGenEvents = require( 'nextgen-events' ) ;
 		* wrap: default wrapping behavior of .put()
 		* noFill: do not call .fill() with default values at ScreenBuffer creation
 		* blending: false/null or true or object (blending options): default blending params (can be overriden by .draw())
+		* palette: Palette instance
 */
 function ScreenBuffer( options = {} ) {
 	this.dst = options.dst ;	// a terminal or another screenBuffer
