@@ -68,6 +68,7 @@ lazy.requireProperties( termkit , {
 	ScreenBuffer: './ScreenBuffer.js' ,
 	ScreenBufferHD: './ScreenBufferHD.js' ,
 	TextBuffer: './TextBuffer.js' ,
+	Vte: './Vte.js' ,
 	autoComplete: './autoComplete.js' ,
 	spChars: './spChars.js' ,
 
