@@ -3,7 +3,10 @@ v1.30.0
 -------
 
 Finally ScreenBuffer* support fullwidth char
-WARNING: ScreenBufferHD breaking changes (beta API - not under SemVer) support for *defaultColor is dropped because it is not compatible with alpha channel and blending, attributes changed: now colors channel are inside color, and bgColor is consistent, allowing to pass similar (standard) color object to both the foreground and background
+WARNING: ScreenBufferHD breaking changes (beta API - not under SemVer)
+	* Support for *defaultColor is dropped because it is not compatible with alpha channel and blending
+	* attributes changed: now color channels are inside 'color', and bgColor is consistent, allowing to pass similar (standard) color object
+		 to both the foreground and background (see the doc)
 
 
 v1.29.3
